syntax = "proto2";
option java_package = "bitverify.network.proto";
option java_outer_classname = "MessageProto";

message Message {
    enum Type {HEADERS = 1;BLOCK = 2; ENTRY = 3; PEERS = 4; GETPEERS = 5; VERSION = 6; ACK = 7; GET_HEADERS = 8; GET_BLOCK = 9; VERSION_ACK = 10; BLOCK_NOT_FOUND = 11;}

    required Type type = 1;
    optional HeadersMessage headers = 2;
    optional BlockMessage block = 3;
    optional EntryMessage entry = 4;
    optional Peers peers = 5;
    optional GetPeers getPeers = 6;
    optional Version version = 7;
    optional Ack ack = 8;
    optional GetHeadersMessage getHeaders = 9;
    optional GetBlockMessage getBlock = 10;
    optional VersionAck versionAck = 11;
    optional BlockNotFoundMessage blockNotFound = 12;
}

message Version {
    required int32 listenPort = 1;
}

message Ack {
}

message VersionAck {
    required int32 listenPort = 1;
}


message GetHeadersMessage {
    repeated bytes from = 1;
}

message HeadersMessage {
    repeated bytes headers = 1;
}

message GetBlockMessage {
    required bytes blockID = 1;
}

message BlockMessage {
    required bytes blockBytes = 1;
    repeated bytes entries = 2;
}

message BlockNotFoundMessage {
    required bytes blockID = 1;
}

message EntryMessage {
    required bytes entryBytes = 1;
}

message Peers {
    repeated NetAddress address = 1;
}
// encodes serialisation of the addresses.
message NetAddress {
    required string hostName = 1;
    required int32 port = 2;
}

message GetPeers {
}

